# HeteroSpawn-RL

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  HeteroSpawn_DeepResearch_RL_Project_Design.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  feature.yml
.github/workflows/: ci.yml
docs/: development-log.md
docs/adr/: 0000-template.md  0001-api-first-benchmark-validation.md  0002-turing-native-backend-and-optional-vllm.md  0003-xbench-development-training-reward.md  0004-wideseek-primary-rl-environment.md  0005-qwen3-4b-qlora-research-profile.md
docs/benchmarks/: wideseek-r1.md  xbench-deepsearch.md
docs/runbooks/: remote-backend-spike.md  wideseek-offline-environment.md
docs/validation/: 2026-07-22-local-hf-lora-contract.md  2026-07-22-milestone2-training-contracts.md  2026-07-22-minimax-development-judge.md  2026-07-22-minimax-live-smoke.md  2026-07-22-minimax-mcp-search.md  2026-07-22-minimax-multitask-pilot.md  2026-07-22-xbench-api-pilot.md  2026-07-23-openrlhf-native-spike.md  2026-07-23-public-release-audit.md  2026-07-23-remote-preflight.md  2026-07-23-rlinf-native-spike.md  2026-07-23-trainable-episode-cycle.md  2026-07-23-verl-native-spike.md  2026-07-23-vllm-product-rollout-contract.md  2026-07-23-vllm-turing-rollout-spike.md  2026-07-23-wideseek-agent-loop-contract.md  2026-07-23-wideseek-data-reward.md  2026-07-23-wideseek-offline-retrieval-contract.md  2026-07-23-wideseek-remote-full-acceptance.md  2026-07-23-wideseek-training-closeout.md  2026-07-23-xbench-training-reward-phase-transactions.md  2026-07-24-qwen3-4b-qlora-wideseek.md
manifests/: qwen3-4b.json  wideseek-e5-base-v2.json  wideseek-train-data.json  wideseek-wiki-2018-corpus.json
scripts/: fetch_xbench.py  probe_minimax_mcp.py  remote_preflight.py  start_wideseek_offline.sh
src/heterospawn/: __init__.py  cli.py  errors.py
src/heterospawn/assets/: __init__.py  huggingface.py
src/heterospawn/backends/: __init__.py
src/heterospawn/benchmarks/: __init__.py  wideseek.py  xbench.py
src/heterospawn/domain/: __init__.py  ids.py  tasks.py  training.py  versions.py
src/heterospawn/evaluation/: __init__.py  api_pilot.py  judges.py  semantic_judge.py  wideseek.py
src/heterospawn/orchestration/: __init__.py  api_episode.py  budget.py  models.py  (+4 more)
tests/: conftest.py
tests/local_backend/: test_local_hf_backend.py
tests/unit/: test_actions.py  test_alternating_coordinator.py  test_api_episode.py  test_api_pilot.py  test_judges.py  test_local_hf_config.py  test_minimax_mcp_search.py  test_minimax_policy.py  test_mock_policy.py  test_phase_transactions.py  test_remote_preflight.py  test_research_contracts.py  test_semantic_judge.py  test_tavily_search.py  test_trainable_episode_cycle.py  test_training_contracts.py  test_versions.py  test_vllm_rollout_service.py  test_wideseek_actions.py  test_wideseek_assets.py  test_wideseek_dataset.py  test_wideseek_episode.py  test_wideseek_evaluator.py  test_wideseek_local_search.py  test_wideseek_reward.py  test_wideseek_smoke.py  test_xbench.py  test_xbench_training_reward.py
(+34 files in other folders)
