[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heterospawn-rl"
version = "0.1.0"
description = "Dynamic heterogeneous agent spawning for deep-research reinforcement learning"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "HeteroSpawn-RL contributors" }]
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.5,<1",
]

[project.scripts]
heterospawn = "heterospawn.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "live: requires explicitly configured external API credentials",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["heterospawn"]
