[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "heterospawn-rl"
version = "0.1.0"
description = "Dynamic heterogeneous agent spawning for deep-research reinforcement learning"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "HeteroSpawn-RL contributors" }]
dependencies = [
  "httpx>=0.27,<1",
  "mcp>=1.26,<2",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
local = [
  "accelerate>=1.2,<2",
  "numpy>=1.26,<2",
  "peft>=0.14,<1",
  "safetensors>=0.4,<1",
  "torch>=2.4,<3",
  "transformers>=4.51,<5",
]
qlora = [
  "accelerate>=1.2,<2",
  "bitsandbytes>=0.45,<1",
  "numpy>=1.26,<2",
  "peft>=0.14,<1",
  "safetensors>=0.4,<1",
  "torch>=2.4,<3",
  "transformers>=4.51,<5",
]
vllm-turing = [
  "accelerate==1.2.1; platform_system == 'Linux'",
  "numpy==1.26.4; platform_system == 'Linux'",
  "peft==0.14.0; platform_system == 'Linux'",
  "safetensors==0.5.2; platform_system == 'Linux'",
  "setuptools==75.8.0; platform_system == 'Linux'",
  "torch==2.5.1; platform_system == 'Linux'",
  "transformers==4.48.1; platform_system == 'Linux'",
  "vllm==0.7.0; platform_system == 'Linux'",
  "xformers==0.0.28.post3; platform_system == 'Linux'",
]
wideseek = [
  "huggingface-hub>=0.34,<2",
]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.15,<0.16",
]

[project.scripts]
heterospawn = "heterospawn.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "live: requires explicitly configured external API credentials",
  "local_backend: requires optional local-model dependencies",
  "gpu: requires an explicitly selected CUDA device and local model download",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["heterospawn"]
